--- a/src/std/Build.zig.html
+++ b/src/std/Build.zig.html
@@ -2303,8 +2303,9 @@
 <span class="line" id="L2156">}</span>
 <span class="line" id="L2157"></span>
 <span class="line" id="L2158"><span class="tok-kw">test</span> {</span>
-<span class="line" id="L2159">    _ = Step;</span>
-<span class="line" id="L2160">}</span>
-<span class="line" id="L2161"></span>
+<span class="line" id="L2159">    _ = Cache;</span>
+<span class="line" id="L2160">    _ = Step;</span>
+<span class="line" id="L2161">}</span>
+<span class="line" id="L2162"></span>
 </code></pre></body>
 </html>
