--- a/src/std/Thread/Semaphore.zig.html
+++ b/src/std/Thread/Semaphore.zig.html
@@ -153,26 +153,28 @@
 <span class="line" id="L39">        <span class="tok-kw">return</span> <span class="tok-kw">error</span>.SkipZigTest;</span>
 <span class="line" id="L40">    }</span>
 <span class="line" id="L41"></span>
-<span class="line" id="L42">    <span class="tok-kw">const</span> TestContext = <span class="tok-kw">struct</span> {</span>
-<span class="line" id="L43">        sem: *Semaphore,</span>
-<span class="line" id="L44">        n: *<span class="tok-type">i32</span>,</span>
-<span class="line" id="L45">        <span class="tok-kw">fn</span> <span class="tok-fn">worker</span>(ctx: *<span class="tok-builtin">@This</span>()) <span class="tok-type">void</span> {</span>
-<span class="line" id="L46">            ctx.sem.wait();</span>
-<span class="line" id="L47">            ctx.n.* += <span class="tok-number">1</span>;</span>
-<span class="line" id="L48">            ctx.sem.post();</span>
-<span class="line" id="L49">        }</span>
-<span class="line" id="L50">    };</span>
-<span class="line" id="L51">    <span class="tok-kw">const</span> num_threads = <span class="tok-number">3</span>;</span>
-<span class="line" id="L52">    <span class="tok-kw">var</span> sem = Semaphore{ .permits = <span class="tok-number">1</span> };</span>
-<span class="line" id="L53">    <span class="tok-kw">var</span> threads: [num_threads]std.Thread = <span class="tok-null">undefined</span>;</span>
-<span class="line" id="L54">    <span class="tok-kw">var</span> n: <span class="tok-type">i32</span> = <span class="tok-number">0</span>;</span>
-<span class="line" id="L55">    <span class="tok-kw">var</span> ctx = TestContext{ .sem = &amp;sem, .n = &amp;n };</span>
-<span class="line" id="L56"></span>
-<span class="line" id="L57">    <span class="tok-kw">for</span> (&amp;threads) |*t| t.* = <span class="tok-kw">try</span> std.Thread.spawn(.{}, TestContext.worker, .{&amp;ctx});</span>
-<span class="line" id="L58">    <span class="tok-kw">for</span> (threads) |t| t.join();</span>
-<span class="line" id="L59">    sem.wait();</span>
-<span class="line" id="L60">    <span class="tok-kw">try</span> testing.expect(n == num_threads);</span>
-<span class="line" id="L61">}</span>
-<span class="line" id="L62"></span>
+<span class="line" id="L42">    <span class="tok-kw">if</span> (builtin.zig_backend == .stage2_x86_64) <span class="tok-kw">return</span> <span class="tok-kw">error</span>.SkipZigTest;</span>
+<span class="line" id="L43"></span>
+<span class="line" id="L44">    <span class="tok-kw">const</span> TestContext = <span class="tok-kw">struct</span> {</span>
+<span class="line" id="L45">        sem: *Semaphore,</span>
+<span class="line" id="L46">        n: *<span class="tok-type">i32</span>,</span>
+<span class="line" id="L47">        <span class="tok-kw">fn</span> <span class="tok-fn">worker</span>(ctx: *<span class="tok-builtin">@This</span>()) <span class="tok-type">void</span> {</span>
+<span class="line" id="L48">            ctx.sem.wait();</span>
+<span class="line" id="L49">            ctx.n.* += <span class="tok-number">1</span>;</span>
+<span class="line" id="L50">            ctx.sem.post();</span>
+<span class="line" id="L51">        }</span>
+<span class="line" id="L52">    };</span>
+<span class="line" id="L53">    <span class="tok-kw">const</span> num_threads = <span class="tok-number">3</span>;</span>
+<span class="line" id="L54">    <span class="tok-kw">var</span> sem = Semaphore{ .permits = <span class="tok-number">1</span> };</span>
+<span class="line" id="L55">    <span class="tok-kw">var</span> threads: [num_threads]std.Thread = <span class="tok-null">undefined</span>;</span>
+<span class="line" id="L56">    <span class="tok-kw">var</span> n: <span class="tok-type">i32</span> = <span class="tok-number">0</span>;</span>
+<span class="line" id="L57">    <span class="tok-kw">var</span> ctx = TestContext{ .sem = &amp;sem, .n = &amp;n };</span>
+<span class="line" id="L58"></span>
+<span class="line" id="L59">    <span class="tok-kw">for</span> (&amp;threads) |*t| t.* = <span class="tok-kw">try</span> std.Thread.spawn(.{}, TestContext.worker, .{&amp;ctx});</span>
+<span class="line" id="L60">    <span class="tok-kw">for</span> (threads) |t| t.join();</span>
+<span class="line" id="L61">    sem.wait();</span>
+<span class="line" id="L62">    <span class="tok-kw">try</span> testing.expect(n == num_threads);</span>
+<span class="line" id="L63">}</span>
+<span class="line" id="L64"></span>
 </code></pre></body>
 </html>
