--- a/src/lib/math/fields/fields.zig.html
+++ b/src/lib/math/fields/fields.zig.html
@@ -133,7 +133,7 @@
 <span class="line" id="L19">                &amp;bz,</span>
 <span class="line" id="L20">                [_]<span class="tok-type">u8</span>{<span class="tok-number">0</span>} ** BytesSize,</span>
 <span class="line" id="L21">            );</span>
-<span class="line" id="L22">            <span class="tok-kw">break</span> :val Self{ .fe = bz };</span>
+<span class="line" id="L22">            <span class="tok-kw">break</span> :val .{ .fe = bz };</span>
 <span class="line" id="L23">        };</span>
 <span class="line" id="L24"></span>
 <span class="line" id="L25">        fe: F.MontgomeryDomainFieldElement,</span>
@@ -158,7 +158,7 @@
 <span class="line" id="L44">                nonMont,</span>
 <span class="line" id="L45">            );</span>
 <span class="line" id="L46"></span>
-<span class="line" id="L47">            <span class="tok-kw">return</span> Self{ .fe = mont };</span>
+<span class="line" id="L47">            <span class="tok-kw">return</span> .{ .fe = mont };</span>
 <span class="line" id="L48">        }</span>
 <span class="line" id="L49"></span>
 <span class="line" id="L50">        <span class="tok-kw">pub</span> <span class="tok-kw">fn</span> <span class="tok-fn">zero</span>() Self {</span>
@@ -169,7 +169,7 @@
 <span class="line" id="L55">            <span class="tok-kw">const</span> oneValue = <span class="tok-kw">comptime</span> blk: {</span>
 <span class="line" id="L56">                <span class="tok-kw">var</span> baseOne: F.MontgomeryDomainFieldElement = <span class="tok-null">undefined</span>;</span>
 <span class="line" id="L57">                F.setOne(&amp;baseOne);</span>
-<span class="line" id="L58">                <span class="tok-kw">break</span> :blk Self{ .fe = baseOne };</span>
+<span class="line" id="L58">                <span class="tok-kw">break</span> :blk .{ .fe = baseOne };</span>
 <span class="line" id="L59">            };</span>
 <span class="line" id="L60">            <span class="tok-kw">return</span> oneValue;</span>
 <span class="line" id="L61">        }</span>
@@ -234,7 +234,7 @@
 <span class="line" id="L120">                self.fe,</span>
 <span class="line" id="L121">                other.fe,</span>
 <span class="line" id="L122">            );</span>
-<span class="line" id="L123">            <span class="tok-kw">return</span> Self{ .fe = ret };</span>
+<span class="line" id="L123">            <span class="tok-kw">return</span> .{ .fe = ret };</span>
 <span class="line" id="L124">        }</span>
 <span class="line" id="L125"></span>
 <span class="line" id="L126">        <span class="tok-kw">pub</span> <span class="tok-kw">fn</span> <span class="tok-fn">sub</span>(</span>
@@ -247,7 +247,7 @@
 <span class="line" id="L133">                self.fe,</span>
 <span class="line" id="L134">                other.fe,</span>
 <span class="line" id="L135">            );</span>
-<span class="line" id="L136">            <span class="tok-kw">return</span> Self{ .fe = ret };</span>
+<span class="line" id="L136">            <span class="tok-kw">return</span> .{ .fe = ret };</span>
 <span class="line" id="L137">        }</span>
 <span class="line" id="L138"></span>
 <span class="line" id="L139">        <span class="tok-kw">pub</span> <span class="tok-kw">fn</span> <span class="tok-fn">mul</span>(</span>
@@ -260,7 +260,7 @@
 <span class="line" id="L146">                self.fe,</span>
 <span class="line" id="L147">                other.fe,</span>
 <span class="line" id="L148">            );</span>
-<span class="line" id="L149">            <span class="tok-kw">return</span> Self{ .fe = ret };</span>
+<span class="line" id="L149">            <span class="tok-kw">return</span> .{ .fe = ret };</span>
 <span class="line" id="L150">        }</span>
 <span class="line" id="L151"></span>
 <span class="line" id="L152">        <span class="tok-kw">pub</span> <span class="tok-kw">fn</span> <span class="tok-fn">mulBy5</span>(self: Self) Self {</span>
@@ -280,7 +280,7 @@
 <span class="line" id="L166">                ret,</span>
 <span class="line" id="L167">                self.fe,</span>
 <span class="line" id="L168">            );</span>
-<span class="line" id="L169">            <span class="tok-kw">return</span> Self{ .fe = ret };</span>
+<span class="line" id="L169">            <span class="tok-kw">return</span> .{ .fe = ret };</span>
 <span class="line" id="L170">        }</span>
 <span class="line" id="L171"></span>
 <span class="line" id="L172">        <span class="tok-kw">pub</span> <span class="tok-kw">fn</span> <span class="tok-fn">neg</span>(self: Self) Self {</span>
@@ -290,7 +290,7 @@
 <span class="line" id="L176">                base_zero.fe,</span>
 <span class="line" id="L177">                self.fe,</span>
 <span class="line" id="L178">            );</span>
-<span class="line" id="L179">            <span class="tok-kw">return</span> Self{ .fe = ret };</span>
+<span class="line" id="L179">            <span class="tok-kw">return</span> .{ .fe = ret };</span>
 <span class="line" id="L180">        }</span>
 <span class="line" id="L181"></span>
 <span class="line" id="L182">        <span class="tok-kw">pub</span> <span class="tok-kw">fn</span> <span class="tok-fn">isZero</span>(self: Self) <span class="tok-type">bool</span> {</span>
