--- a/src/lib/vm/instructions.zig.html
+++ b/src/lib/vm/instructions.zig.html
@@ -319,7 +319,7 @@
 <span class="line" id="L179">        ),</span>
 <span class="line" id="L180">    );</span>
 <span class="line" id="L181"></span>
-<span class="line" id="L182">    <span class="tok-kw">return</span> Instruction{</span>
+<span class="line" id="L182">    <span class="tok-kw">return</span> .{</span>
 <span class="line" id="L183">        .off_0 = fromBiasedRepresentation(</span>
 <span class="line" id="L184">            <span class="tok-builtin">@as</span>(</span>
 <span class="line" id="L185">                <span class="tok-type">u16</span>,</span>
@@ -373,10 +373,10 @@
 <span class="line" id="L233"><span class="tok-comment">/// Parsed Opcode value, or an error if invalid</span></span>
 <span class="line" id="L234"><span class="tok-kw">fn</span> <span class="tok-fn">parseOpcode</span>(opcode_num: <span class="tok-type">u8</span>) Error!Opcode {</span>
 <span class="line" id="L235">    <span class="tok-kw">return</span> <span class="tok-kw">switch</span> (opcode_num) {</span>
-<span class="line" id="L236">        <span class="tok-number">0</span> =&gt; Opcode.NOp,</span>
-<span class="line" id="L237">        <span class="tok-number">1</span> =&gt; Opcode.Call,</span>
-<span class="line" id="L238">        <span class="tok-number">2</span> =&gt; Opcode.Ret,</span>
-<span class="line" id="L239">        <span class="tok-number">4</span> =&gt; Opcode.AssertEq,</span>
+<span class="line" id="L236">        <span class="tok-number">0</span> =&gt; .NOp,</span>
+<span class="line" id="L237">        <span class="tok-number">1</span> =&gt; .Call,</span>
+<span class="line" id="L238">        <span class="tok-number">2</span> =&gt; .Ret,</span>
+<span class="line" id="L239">        <span class="tok-number">4</span> =&gt; .AssertEq,</span>
 <span class="line" id="L240">        <span class="tok-kw">else</span> =&gt; Error.InvalidOpcode,</span>
 <span class="line" id="L241">    };</span>
 <span class="line" id="L242">}</span>
@@ -388,10 +388,10 @@
 <span class="line" id="L248"><span class="tok-comment">/// Parsed Op1Src value, or an error if invalid</span></span>
 <span class="line" id="L249"><span class="tok-kw">fn</span> <span class="tok-fn">parseOp1Src</span>(op1_src_num: <span class="tok-type">u8</span>) Error!Op1Src {</span>
 <span class="line" id="L250">    <span class="tok-kw">return</span> <span class="tok-kw">switch</span> (op1_src_num) {</span>
-<span class="line" id="L251">        <span class="tok-number">0</span> =&gt; Op1Src.Op0,</span>
-<span class="line" id="L252">        <span class="tok-number">1</span> =&gt; Op1Src.Imm,</span>
-<span class="line" id="L253">        <span class="tok-number">2</span> =&gt; Op1Src.FP,</span>
-<span class="line" id="L254">        <span class="tok-number">4</span> =&gt; Op1Src.AP,</span>
+<span class="line" id="L251">        <span class="tok-number">0</span> =&gt; .Op0,</span>
+<span class="line" id="L252">        <span class="tok-number">1</span> =&gt; .Imm,</span>
+<span class="line" id="L253">        <span class="tok-number">2</span> =&gt; .FP,</span>
+<span class="line" id="L254">        <span class="tok-number">4</span> =&gt; .AP,</span>
 <span class="line" id="L255">        <span class="tok-kw">else</span> =&gt; Error.InvalidOp1Reg,</span>
 <span class="line" id="L256">    };</span>
 <span class="line" id="L257">}</span>
@@ -408,14 +408,14 @@
 <span class="line" id="L268">) Error!ResLogic {</span>
 <span class="line" id="L269">    <span class="tok-kw">return</span> <span class="tok-kw">switch</span> (res_logic_num) {</span>
 <span class="line" id="L270">        <span class="tok-number">0</span> =&gt; {</span>
-<span class="line" id="L271">            <span class="tok-kw">if</span> (pc_update == PcUpdate.Jnz) {</span>
-<span class="line" id="L272">                <span class="tok-kw">return</span> ResLogic.Unconstrained;</span>
+<span class="line" id="L271">            <span class="tok-kw">if</span> (pc_update == .Jnz) {</span>
+<span class="line" id="L272">                <span class="tok-kw">return</span> .Unconstrained;</span>
 <span class="line" id="L273">            } <span class="tok-kw">else</span> {</span>
-<span class="line" id="L274">                <span class="tok-kw">return</span> ResLogic.Op1;</span>
+<span class="line" id="L274">                <span class="tok-kw">return</span> .Op1;</span>
 <span class="line" id="L275">            }</span>
 <span class="line" id="L276">        },</span>
-<span class="line" id="L277">        <span class="tok-number">1</span> =&gt; ResLogic.Add,</span>
-<span class="line" id="L278">        <span class="tok-number">2</span> =&gt; ResLogic.Mul,</span>
+<span class="line" id="L277">        <span class="tok-number">1</span> =&gt; .Add,</span>
+<span class="line" id="L278">        <span class="tok-number">2</span> =&gt; .Mul,</span>
 <span class="line" id="L279">        <span class="tok-kw">else</span> =&gt; Error.Invalidres_logic,</span>
 <span class="line" id="L280">    };</span>
 <span class="line" id="L281">}</span>
@@ -427,10 +427,10 @@
 <span class="line" id="L287"><span class="tok-comment">/// Parsed pc_update value, or an error if invalid</span></span>
 <span class="line" id="L288"><span class="tok-kw">fn</span> <span class="tok-fn">parsePcUpdate</span>(pc_update_num: <span class="tok-type">u8</span>) Error!PcUpdate {</span>
 <span class="line" id="L289">    <span class="tok-kw">return</span> <span class="tok-kw">switch</span> (pc_update_num) {</span>
-<span class="line" id="L290">        <span class="tok-number">0</span> =&gt; PcUpdate.Regular,</span>
-<span class="line" id="L291">        <span class="tok-number">1</span> =&gt; PcUpdate.Jump,</span>
-<span class="line" id="L292">        <span class="tok-number">2</span> =&gt; PcUpdate.JumpRel,</span>
-<span class="line" id="L293">        <span class="tok-number">4</span> =&gt; PcUpdate.Jnz,</span>
+<span class="line" id="L290">        <span class="tok-number">0</span> =&gt; .Regular,</span>
+<span class="line" id="L291">        <span class="tok-number">1</span> =&gt; .Jump,</span>
+<span class="line" id="L292">        <span class="tok-number">2</span> =&gt; .JumpRel,</span>
+<span class="line" id="L293">        <span class="tok-number">4</span> =&gt; .Jnz,</span>
 <span class="line" id="L294">        <span class="tok-kw">else</span> =&gt; Error.Invalidpc_update,</span>
 <span class="line" id="L295">    };</span>
 <span class="line" id="L296">}</span>
@@ -446,13 +446,13 @@
 <span class="line" id="L306">    opcode: Opcode,</span>
 <span class="line" id="L307">) Error!ApUpdate {</span>
 <span class="line" id="L308">    <span class="tok-kw">return</span> <span class="tok-kw">switch</span> (ap_update_num) {</span>
-<span class="line" id="L309">        <span class="tok-number">0</span> =&gt; <span class="tok-kw">if</span> (opcode == Opcode.Call) {</span>
-<span class="line" id="L310">            <span class="tok-kw">return</span> ApUpdate.Add2;</span>
+<span class="line" id="L309">        <span class="tok-number">0</span> =&gt; <span class="tok-kw">if</span> (opcode == .Call) {</span>
+<span class="line" id="L310">            <span class="tok-kw">return</span> .Add2;</span>
 <span class="line" id="L311">        } <span class="tok-kw">else</span> {</span>
-<span class="line" id="L312">            <span class="tok-kw">return</span> ApUpdate.Regular;</span>
+<span class="line" id="L312">            <span class="tok-kw">return</span> .Regular;</span>
 <span class="line" id="L313">        },</span>
-<span class="line" id="L314">        <span class="tok-number">1</span> =&gt; ApUpdate.Add,</span>
-<span class="line" id="L315">        <span class="tok-number">2</span> =&gt; ApUpdate.Add1,</span>
+<span class="line" id="L314">        <span class="tok-number">1</span> =&gt; .Add,</span>
+<span class="line" id="L315">        <span class="tok-number">2</span> =&gt; .Add1,</span>
 <span class="line" id="L316">        <span class="tok-kw">else</span> =&gt; Error.Invalidap_update,</span>
 <span class="line" id="L317">    };</span>
 <span class="line" id="L318">}</span>
@@ -464,9 +464,9 @@
 <span class="line" id="L324"><span class="tok-comment">/// Appropriate fp_update value</span></span>
 <span class="line" id="L325"><span class="tok-kw">fn</span> <span class="tok-fn">parseFpUpdate</span>(opcode: Opcode) FpUpdate {</span>
 <span class="line" id="L326">    <span class="tok-kw">return</span> <span class="tok-kw">switch</span> (opcode) {</span>
-<span class="line" id="L327">        Opcode.Call =&gt; FpUpdate.APPlus2,</span>
-<span class="line" id="L328">        Opcode.Ret =&gt; FpUpdate.Dst,</span>
-<span class="line" id="L329">        <span class="tok-kw">else</span> =&gt; FpUpdate.Regular,</span>
+<span class="line" id="L327">        .Call =&gt; .APPlus2,</span>
+<span class="line" id="L328">        .Ret =&gt; .Dst,</span>
+<span class="line" id="L329">        <span class="tok-kw">else</span> =&gt; .Regular,</span>
 <span class="line" id="L330">    };</span>
 <span class="line" id="L331">}</span>
 <span class="line" id="L332"></span>
