--- a/src/lib/vm/core.zig.html
+++ b/src/lib/vm/core.zig.html
@@ -141,7 +141,7 @@
 </span>
 <span class="line" id="L23"></span>
 <span class="line" id="L24">    <span class="tok-comment">/// The memory allocator. Can be needed for the deallocation of the VM resources.</span></span>
-<span class="line" id="L25">    allocator: *<span class="tok-kw">const</span> Allocator,</span>
+<span class="line" id="L25">    allocator: Allocator,</span>
 <span class="line" id="L26">    <span class="tok-comment">/// The run context.</span></span>
 <span class="line" id="L27">    run_context: *RunContext,</span>
 <span class="line" id="L28">    <span class="tok-comment">/// The memory segment manager.</span></span>
@@ -167,7 +167,7 @@
 <span class="line" id="L45">    <span class="tok-comment">/// # Errors</span></span>
 <span class="line" id="L46">    <span class="tok-comment">/// - If a memory allocation fails.</span></span>
 <span class="line" id="L47">    <span class="tok-kw">pub</span> <span class="tok-kw">fn</span> <span class="tok-fn">init</span>(</span>
-<span class="line" id="L48">        allocator: *<span class="tok-kw">const</span> Allocator,</span>
+<span class="line" id="L48">        allocator: Allocator,</span>
 <span class="line" id="L49">        config: Config,</span>
 <span class="line" id="L50">    ) !CairoVM {</span>
 <span class="line" id="L51">        <span class="tok-comment">// Initialize the memory segment manager.</span>
@@ -178,7 +178,7 @@
 <span class="line" id="L54">        <span class="tok-kw">const</span> run_context = <span class="tok-kw">try</span> RunContext.init(allocator);</span>
 <span class="line" id="L55">        <span class="tok-comment">// Initialize the trace context.</span>
 </span>
-<span class="line" id="L56">        <span class="tok-kw">const</span> trace_context = <span class="tok-kw">try</span> TraceContext.init(allocator.*, config.enable_trace);</span>
+<span class="line" id="L56">        <span class="tok-kw">const</span> trace_context = <span class="tok-kw">try</span> TraceContext.init(allocator, config.enable_trace);</span>
 <span class="line" id="L57"></span>
 <span class="line" id="L58">        <span class="tok-kw">return</span> CairoVM{</span>
 <span class="line" id="L59">            .allocator = allocator,</span>
@@ -637,7 +637,7 @@
 <span class="line" id="L430">    <span class="tok-kw">const</span> operands = OperandsResult.default();</span>
 <span class="line" id="L431">    <span class="tok-comment">// Create a new VM instance.</span>
 </span>
-<span class="line" id="L432">    <span class="tok-kw">var</span> vm = <span class="tok-kw">try</span> CairoVM.init(&amp;allocator, .{});</span>
+<span class="line" id="L432">    <span class="tok-kw">var</span> vm = <span class="tok-kw">try</span> CairoVM.init(allocator, .{});</span>
 <span class="line" id="L433">    <span class="tok-kw">defer</span> vm.deinit();</span>
 <span class="line" id="L434"></span>
 <span class="line" id="L435">    <span class="tok-comment">// ************************************************************</span>
@@ -681,7 +681,7 @@
 <span class="line" id="L463">    <span class="tok-kw">const</span> operands = OperandsResult.default();</span>
 <span class="line" id="L464">    <span class="tok-comment">// Create a new VM instance.</span>
 </span>
-<span class="line" id="L465">    <span class="tok-kw">var</span> vm = <span class="tok-kw">try</span> CairoVM.init(&amp;allocator, .{});</span>
+<span class="line" id="L465">    <span class="tok-kw">var</span> vm = <span class="tok-kw">try</span> CairoVM.init(allocator, .{});</span>
 <span class="line" id="L466">    <span class="tok-kw">defer</span> vm.deinit();</span>
 <span class="line" id="L467"></span>
 <span class="line" id="L468">    <span class="tok-comment">// ************************************************************</span>
@@ -725,7 +725,7 @@
 <span class="line" id="L496">    operands.res = <span class="tok-null">null</span>;</span>
 <span class="line" id="L497">    <span class="tok-comment">// Create a new VM instance.</span>
 </span>
-<span class="line" id="L498">    <span class="tok-kw">var</span> vm = <span class="tok-kw">try</span> CairoVM.init(&amp;allocator, .{});</span>
+<span class="line" id="L498">    <span class="tok-kw">var</span> vm = <span class="tok-kw">try</span> CairoVM.init(allocator, .{});</span>
 <span class="line" id="L499">    <span class="tok-kw">defer</span> vm.deinit();</span>
 <span class="line" id="L500"></span>
 <span class="line" id="L501">    <span class="tok-comment">// ************************************************************</span>
@@ -757,7 +757,7 @@
 <span class="line" id="L520">    operands.res = relocatable.fromU64(<span class="tok-number">0</span>);</span>
 <span class="line" id="L521">    <span class="tok-comment">// Create a new VM instance.</span>
 </span>
-<span class="line" id="L522">    <span class="tok-kw">var</span> vm = <span class="tok-kw">try</span> CairoVM.init(&amp;allocator, .{});</span>
+<span class="line" id="L522">    <span class="tok-kw">var</span> vm = <span class="tok-kw">try</span> CairoVM.init(allocator, .{});</span>
 <span class="line" id="L523">    <span class="tok-kw">defer</span> vm.deinit();</span>
 <span class="line" id="L524"></span>
 <span class="line" id="L525">    <span class="tok-comment">// ************************************************************</span>
@@ -792,7 +792,7 @@
 <span class="line" id="L547">    ));</span>
 <span class="line" id="L548">    <span class="tok-comment">// Create a new VM instance.</span>
 </span>
-<span class="line" id="L549">    <span class="tok-kw">var</span> vm = <span class="tok-kw">try</span> CairoVM.init(&amp;allocator, .{});</span>
+<span class="line" id="L549">    <span class="tok-kw">var</span> vm = <span class="tok-kw">try</span> CairoVM.init(allocator, .{});</span>
 <span class="line" id="L550">    <span class="tok-kw">defer</span> vm.deinit();</span>
 <span class="line" id="L551"></span>
 <span class="line" id="L552">    <span class="tok-comment">// ************************************************************</span>
@@ -836,7 +836,7 @@
 <span class="line" id="L580">    operands.res = <span class="tok-null">null</span>;</span>
 <span class="line" id="L581">    <span class="tok-comment">// Create a new VM instance.</span>
 </span>
-<span class="line" id="L582">    <span class="tok-kw">var</span> vm = <span class="tok-kw">try</span> CairoVM.init(&amp;allocator, .{});</span>
+<span class="line" id="L582">    <span class="tok-kw">var</span> vm = <span class="tok-kw">try</span> CairoVM.init(allocator, .{});</span>
 <span class="line" id="L583">    <span class="tok-kw">defer</span> vm.deinit();</span>
 <span class="line" id="L584"></span>
 <span class="line" id="L585">    <span class="tok-comment">// ************************************************************</span>
@@ -871,7 +871,7 @@
 <span class="line" id="L607">    ));</span>
 <span class="line" id="L608">    <span class="tok-comment">// Create a new VM instance.</span>
 </span>
-<span class="line" id="L609">    <span class="tok-kw">var</span> vm = <span class="tok-kw">try</span> CairoVM.init(&amp;allocator, .{});</span>
+<span class="line" id="L609">    <span class="tok-kw">var</span> vm = <span class="tok-kw">try</span> CairoVM.init(allocator, .{});</span>
 <span class="line" id="L610">    <span class="tok-kw">defer</span> vm.deinit();</span>
 <span class="line" id="L611"></span>
 <span class="line" id="L612">    <span class="tok-comment">// ************************************************************</span>
@@ -903,7 +903,7 @@
 <span class="line" id="L631">    operands.res = relocatable.fromU64(<span class="tok-number">42</span>);</span>
 <span class="line" id="L632">    <span class="tok-comment">// Create a new VM instance.</span>
 </span>
-<span class="line" id="L633">    <span class="tok-kw">var</span> vm = <span class="tok-kw">try</span> CairoVM.init(&amp;allocator, .{});</span>
+<span class="line" id="L633">    <span class="tok-kw">var</span> vm = <span class="tok-kw">try</span> CairoVM.init(allocator, .{});</span>
 <span class="line" id="L634">    <span class="tok-kw">defer</span> vm.deinit();</span>
 <span class="line" id="L635"></span>
 <span class="line" id="L636">    <span class="tok-comment">// ************************************************************</span>
@@ -947,7 +947,7 @@
 <span class="line" id="L664">    operands.dst = relocatable.fromU64(<span class="tok-number">0</span>);</span>
 <span class="line" id="L665">    <span class="tok-comment">// Create a new VM instance.</span>
 </span>
-<span class="line" id="L666">    <span class="tok-kw">var</span> vm = <span class="tok-kw">try</span> CairoVM.init(&amp;allocator, .{});</span>
+<span class="line" id="L666">    <span class="tok-kw">var</span> vm = <span class="tok-kw">try</span> CairoVM.init(allocator, .{});</span>
 <span class="line" id="L667">    <span class="tok-kw">defer</span> vm.deinit();</span>
 <span class="line" id="L668"></span>
 <span class="line" id="L669">    <span class="tok-comment">// ************************************************************</span>
@@ -995,7 +995,7 @@
 <span class="line" id="L701">    ));</span>
 <span class="line" id="L702">    <span class="tok-comment">// Create a new VM instance.</span>
 </span>
-<span class="line" id="L703">    <span class="tok-kw">var</span> vm = <span class="tok-kw">try</span> CairoVM.init(&amp;allocator, .{});</span>
+<span class="line" id="L703">    <span class="tok-kw">var</span> vm = <span class="tok-kw">try</span> CairoVM.init(allocator, .{});</span>
 <span class="line" id="L704">    <span class="tok-kw">defer</span> vm.deinit();</span>
 <span class="line" id="L705"></span>
 <span class="line" id="L706">    <span class="tok-comment">// ************************************************************</span>
@@ -1031,7 +1031,7 @@
 <span class="line" id="L729">    operands.op_1 = relocatable.fromU64(<span class="tok-number">42</span>);</span>
 <span class="line" id="L730">    <span class="tok-comment">// Create a new VM instance.</span>
 </span>
-<span class="line" id="L731">    <span class="tok-kw">var</span> vm = <span class="tok-kw">try</span> CairoVM.init(&amp;allocator, .{});</span>
+<span class="line" id="L731">    <span class="tok-kw">var</span> vm = <span class="tok-kw">try</span> CairoVM.init(allocator, .{});</span>
 <span class="line" id="L732">    <span class="tok-kw">defer</span> vm.deinit();</span>
 <span class="line" id="L733"></span>
 <span class="line" id="L734">    <span class="tok-comment">// ************************************************************</span>
@@ -1075,7 +1075,7 @@
 </span>
 <span class="line" id="L762">    <span class="tok-comment">// Create a new VM instance.</span>
 </span>
-<span class="line" id="L763">    <span class="tok-kw">var</span> vm = <span class="tok-kw">try</span> CairoVM.init(&amp;allocator, .{});</span>
+<span class="line" id="L763">    <span class="tok-kw">var</span> vm = <span class="tok-kw">try</span> CairoVM.init(allocator, .{});</span>
 <span class="line" id="L764">    <span class="tok-kw">defer</span> vm.deinit();</span>
 <span class="line" id="L765"></span>
 <span class="line" id="L766">    <span class="tok-comment">// ************************************************************</span>
@@ -1105,7 +1105,7 @@
 <span class="line" id="L783">    <span class="tok-kw">var</span> operands = OperandsResult.default();</span>
 <span class="line" id="L784">    <span class="tok-comment">// Create a new VM instance.</span>
 </span>
-<span class="line" id="L785">    <span class="tok-kw">var</span> vm = <span class="tok-kw">try</span> CairoVM.init(&amp;allocator, .{});</span>
+<span class="line" id="L785">    <span class="tok-kw">var</span> vm = <span class="tok-kw">try</span> CairoVM.init(allocator, .{});</span>
 <span class="line" id="L786">    <span class="tok-kw">defer</span> vm.deinit();</span>
 <span class="line" id="L787"></span>
 <span class="line" id="L788">    <span class="tok-comment">// ************************************************************</span>
@@ -1149,7 +1149,7 @@
 <span class="line" id="L815">    <span class="tok-kw">var</span> operands = OperandsResult.default();</span>
 <span class="line" id="L816">    <span class="tok-comment">// Create a new VM instance.</span>
 </span>
-<span class="line" id="L817">    <span class="tok-kw">var</span> vm = <span class="tok-kw">try</span> CairoVM.init(&amp;allocator, .{});</span>
+<span class="line" id="L817">    <span class="tok-kw">var</span> vm = <span class="tok-kw">try</span> CairoVM.init(allocator, .{});</span>
 <span class="line" id="L818">    <span class="tok-kw">defer</span> vm.deinit();</span>
 <span class="line" id="L819"></span>
 <span class="line" id="L820">    <span class="tok-comment">// ************************************************************</span>
@@ -1193,7 +1193,7 @@
 <span class="line" id="L847">    <span class="tok-kw">var</span> operands = OperandsResult.default();</span>
 <span class="line" id="L848">    <span class="tok-comment">// Create a new VM instance.</span>
 </span>
-<span class="line" id="L849">    <span class="tok-kw">var</span> vm = <span class="tok-kw">try</span> CairoVM.init(&amp;allocator, .{});</span>
+<span class="line" id="L849">    <span class="tok-kw">var</span> vm = <span class="tok-kw">try</span> CairoVM.init(allocator, .{});</span>
 <span class="line" id="L850">    <span class="tok-kw">defer</span> vm.deinit();</span>
 <span class="line" id="L851"></span>
 <span class="line" id="L852">    <span class="tok-comment">// ************************************************************</span>
@@ -1241,7 +1241,7 @@
 <span class="line" id="L883">    ));</span>
 <span class="line" id="L884">    <span class="tok-comment">// Create a new VM instance.</span>
 </span>
-<span class="line" id="L885">    <span class="tok-kw">var</span> vm = <span class="tok-kw">try</span> CairoVM.init(&amp;allocator, .{});</span>
+<span class="line" id="L885">    <span class="tok-kw">var</span> vm = <span class="tok-kw">try</span> CairoVM.init(allocator, .{});</span>
 <span class="line" id="L886">    <span class="tok-kw">defer</span> vm.deinit();</span>
 <span class="line" id="L887"></span>
 <span class="line" id="L888">    <span class="tok-comment">// ************************************************************</span>
@@ -1286,7 +1286,7 @@
 <span class="line" id="L916">    operands.dst = relocatable.fromU64(<span class="tok-number">42</span>);</span>
 <span class="line" id="L917">    <span class="tok-comment">// Create a new VM instance.</span>
 </span>
-<span class="line" id="L918">    <span class="tok-kw">var</span> vm = <span class="tok-kw">try</span> CairoVM.init(&amp;allocator, .{});</span>
+<span class="line" id="L918">    <span class="tok-kw">var</span> vm = <span class="tok-kw">try</span> CairoVM.init(allocator, .{});</span>
 <span class="line" id="L919">    <span class="tok-kw">defer</span> vm.deinit();</span>
 <span class="line" id="L920"></span>
 <span class="line" id="L921">    <span class="tok-comment">// ************************************************************</span>
@@ -1331,7 +1331,7 @@
 <span class="line" id="L948">    <span class="tok-kw">var</span> config = Config{ .proof_mode = <span class="tok-null">false</span>, .enable_trace = <span class="tok-null">true</span> };</span>
 <span class="line" id="L949"></span>
 <span class="line" id="L950">    <span class="tok-kw">var</span> vm = <span class="tok-kw">try</span> CairoVM.init(</span>
-<span class="line" id="L951">        &amp;allocator,</span>
+<span class="line" id="L951">        allocator,</span>
 <span class="line" id="L952">        config,</span>
 <span class="line" id="L953">    );</span>
 <span class="line" id="L954">    <span class="tok-kw">defer</span> vm.deinit();</span>
@@ -1371,7 +1371,7 @@
 <span class="line" id="L976"></span>
 <span class="line" id="L977">    <span class="tok-comment">// Create a new VM instance.</span>
 </span>
-<span class="line" id="L978">    <span class="tok-kw">var</span> vm = <span class="tok-kw">try</span> CairoVM.init(&amp;allocator, .{});</span>
+<span class="line" id="L978">    <span class="tok-kw">var</span> vm = <span class="tok-kw">try</span> CairoVM.init(allocator, .{});</span>
 <span class="line" id="L979">    <span class="tok-kw">defer</span> vm.deinit();</span>
 <span class="line" id="L980"></span>
 <span class="line" id="L981">    <span class="tok-comment">// ************************************************************</span>
