--- a/src/lib/vm/memory/memory.zig.html
+++ b/src/lib/vm/memory/memory.zig.html
@@ -134,7 +134,7 @@
 <span class="line" id="L15">    <span class="tok-comment">// ************************************************************</span>
 </span>
 <span class="line" id="L16">    <span class="tok-comment">/// The allocator used to allocate the memory.</span></span>
-<span class="line" id="L17">    allocator: *<span class="tok-kw">const</span> Allocator,</span>
+<span class="line" id="L17">    allocator: Allocator,</span>
 <span class="line" id="L18">    <span class="tok-comment">// The data in the memory.</span>
 </span>
 <span class="line" id="L19">    data: std.HashMap(</span>
@@ -174,7 +174,7 @@
 </span>
 <span class="line" id="L44">    <span class="tok-comment">// The new memory.</span>
 </span>
-<span class="line" id="L45">    <span class="tok-kw">pub</span> <span class="tok-kw">fn</span> <span class="tok-fn">init</span>(allocator: *<span class="tok-kw">const</span> Allocator) !*Memory {</span>
+<span class="line" id="L45">    <span class="tok-kw">pub</span> <span class="tok-kw">fn</span> <span class="tok-fn">init</span>(allocator: Allocator) !*Memory {</span>
 <span class="line" id="L46">        <span class="tok-kw">var</span> memory = <span class="tok-kw">try</span> allocator.create(Memory);</span>
 <span class="line" id="L47"></span>
 <span class="line" id="L48">        memory.* = Memory{</span>
@@ -182,12 +182,12 @@
 <span class="line" id="L50">            .data = std.AutoHashMap(</span>
 <span class="line" id="L51">                relocatable.Relocatable,</span>
 <span class="line" id="L52">                relocatable.MaybeRelocatable,</span>
-<span class="line" id="L53">            ).init(allocator.*),</span>
+<span class="line" id="L53">            ).init(allocator),</span>
 <span class="line" id="L54">            .num_segments = <span class="tok-number">0</span>,</span>
 <span class="line" id="L55">            .validated_addresses = std.AutoHashMap(</span>
 <span class="line" id="L56">                relocatable.Relocatable,</span>
 <span class="line" id="L57">                <span class="tok-type">bool</span>,</span>
-<span class="line" id="L58">            ).init(allocator.*),</span>
+<span class="line" id="L58">            ).init(allocator),</span>
 <span class="line" id="L59">        };</span>
 <span class="line" id="L60">        <span class="tok-kw">return</span> memory;</span>
 <span class="line" id="L61">    }</span>
@@ -276,7 +276,7 @@
 <span class="line" id="L125"></span>
 <span class="line" id="L126">    <span class="tok-comment">// Initialize a memory instance.</span>
 </span>
-<span class="line" id="L127">    <span class="tok-kw">var</span> memory = <span class="tok-kw">try</span> Memory.init(&amp;allocator);</span>
+<span class="line" id="L127">    <span class="tok-kw">var</span> memory = <span class="tok-kw">try</span> Memory.init(allocator);</span>
 <span class="line" id="L128">    <span class="tok-kw">defer</span> memory.deinit();</span>
 <span class="line" id="L129"></span>
 <span class="line" id="L130">    <span class="tok-comment">// Get a value from the memory at an address that doesn't exist.</span>
@@ -299,7 +299,7 @@
 <span class="line" id="L144"></span>
 <span class="line" id="L145">    <span class="tok-comment">// Initialize a memory instance.</span>
 </span>
-<span class="line" id="L146">    <span class="tok-kw">var</span> memory = <span class="tok-kw">try</span> Memory.init(&amp;allocator);</span>
+<span class="line" id="L146">    <span class="tok-kw">var</span> memory = <span class="tok-kw">try</span> Memory.init(allocator);</span>
 <span class="line" id="L147">    <span class="tok-kw">defer</span> memory.deinit();</span>
 <span class="line" id="L148"></span>
 <span class="line" id="L149">    <span class="tok-kw">const</span> address_1 = relocatable.Relocatable.new(</span>
